fixed department pages title wrapping

--- a/assets/css/dulcet.style.css
+++ b/assets/css/dulcet.style.css
@@ -9516,6 +9516,9 @@ iframe {
 .page-about-directory .table-responsive tr.even td:nth-of-type(2) {
   white-space: nowrap; }
 
+.page-about-directory-dept .table-responsive tr.even td:nth-of-type(2) {
+  white-space: normal; }
+
 .page-about-directory .dul-staff-search-box,
 .page-about-directory .dul-staff-search-box .form-item,
 .page-about-directory .dul-staff-search-box .input-group {
