--- a/scss/dulcet/_global.scss
+++ b/scss/dulcet/_global.scss
@@ -288,6 +288,10 @@ iframe {
   white-space: nowrap;
 }
 
+.page-about-directory-dept .table-responsive tr.even td:nth-of-type(2) {
+  white-space: normal;
+}
+
 .page-about-directory .dul-staff-search-box,
 .page-about-directory .dul-staff-search-box .form-item,
 .page-about-directory .dul-staff-search-box .input-group {
